chore: Initial setup for errorprone